--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "acmd-syntax",
   "theme": "syntax",
-  "version": "0.0.1",
+  "version": "0.0.0",
   "description": "A short description of your syntax theme",
   "keywords": [
     "syntax",
     "theme"
   ],
-  "repository": "https://github.com/atom/acmd-syntax",
+  "repository": "https://github.com/kittlish/acmd-syntax",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
